# Garnish

./: README.md
garnish/: org.codeberg.spaciouscoder78.garnish.json
garnish/data/: meson.build  org.codeberg.spaciouscoder78.garnish.desktop.in  org.codeberg.spaciouscoder78.garnish.gschema.xml  org.codeberg.spaciouscoder78.garnish.metainfo.xml.in  org.codeberg.spaciouscoder78.garnish.service.in
garnish/data/icons/: meson.build
garnish/po/: POTFILES.in
garnish/src/: Database.py  database.py  garnish.gresource.xml  garnish.in  main.py  meson.build  style.css  window.blp  window.py
